Point to forked version.

--- a/packages/url_launcher/url_launcher_web/pubspec.yaml
+++ b/packages/url_launcher/url_launcher_web/pubspec.yaml
@@ -21,7 +21,11 @@ dependencies:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
-  url_launcher_platform_interface: ^2.0.0
+  url_launcher_platform_interface:
+    git:
+      url: https://github.com/zliide/flutter_plugins.git
+      ref: 165315ce4
+      path: packages/url_launcher/url_launcher_platform_interface/
 
 dev_dependencies:
   flutter_test:
