--- a/packages/url_launcher/url_launcher/pubspec.yaml
+++ b/packages/url_launcher/url_launcher/pubspec.yaml
@@ -4,6 +4,7 @@ description: Flutter plugin for launching a URL. Supports
 repository: https://github.com/flutter/plugins/tree/main/packages/url_launcher/url_launcher
 issue_tracker: https://github.com/flutter/flutter/issues?q=is%3Aissue+is%3Aopen+label%3A%22p%3A+url_launcher%22
 version: 6.1.0
+publish_to: "none"
 
 environment:
   sdk: ">=2.14.0 <3.0.0"
@@ -34,9 +35,18 @@ dependencies:
   # implementations, as both are compatible.
   url_launcher_linux: ">=2.0.0 <4.0.0"
   url_launcher_macos: ">=2.0.0 <4.0.0"
-  url_launcher_platform_interface: ^2.0.3
-  url_launcher_web: ^2.0.0
+  url_launcher_web:
+    git:
+      url: https://github.com/zliide/flutter_plugins.git
+      ref: 165315ce4
+      path: packages/url_launcher/url_launcher_web/
   url_launcher_windows: ">=2.0.0 <4.0.0"
+dependency_overrides:
+  url_launcher_platform_interface:
+    git:
+      url: https://github.com/zliide/flutter_plugins.git
+      ref: 165315ce4
+      path: packages/url_launcher/url_launcher_platform_interface/
 
 dev_dependencies:
   flutter_test:
